[project]
name = "deep-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
]

[[index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
